--- a/timesite/timeapp/templates/site_index.html
+++ b/timesite/timeapp/templates/site_index.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>{{ event }}</h1>
-    <hr>
+    {% for event in events %}
+        <hr>
+        <h1><a href="{% url 'event_detail' event.pk %}">{{ event }}</a></h1>
+        <p>{{ event.description }}</p>
+        <p>{{ event.event_time }}</p>
+    {% endfor %}
 {% endblock %}
