Adding event_new

--- a/timesite/timesite/templates/base.html
+++ b/timesite/timesite/templates/base.html
@@ -21,7 +21,8 @@
 					<p>Django Time</p>
 				</div>
 				<div class="navbox">
-                    <a class="navbox" href="/">Home</a>
+                    <a class="navbox" href="/">Home | </a>
+                    <a class="navbox" href="{% url 'event_new' %}">New</a>
 				</div>
             </div>
             <div id="container">
