Display request META information works, but could use better formatting

--- a/timesite/timeapp/templates/meta_detail.html
+++ b/timesite/timeapp/templates/meta_detail.html
@@ -3,6 +3,6 @@
 {% block content %}
     <h1>Request META</h1>
     {% for value in values %}
-        <p>{{ value.foo }}</p>
+        <p>{{ value }}</p>
     {% endfor %}
 {% endblock %}
