--- a/timesite/timesite/templates/base.html
+++ b/timesite/timesite/templates/base.html
@@ -22,7 +22,8 @@
 				</div>
 				<div class="navbox">
                     <a class="navbox" href="/">Home | </a>
-                    <a class="navbox" href="{% url 'event_new' %}">New</a>
+                    <a class="navbox" href="{% url 'event_new' %}">New |</a>
+                    <a class="navbox" href="{% url 'meta_detail' %}">Request META</a>
 				</div>
             </div>
             <div id="container">
