Adding timezone excercize

--- a/timesite/timesite/templates/base.html
+++ b/timesite/timesite/templates/base.html
@@ -22,8 +22,9 @@
 				</div>
 				<div class="navbox">
                     <a class="navbox" href="/">Home | </a>
-                    <a class="navbox" href="{% url 'event_new' %}">New |</a>
-                    <a class="navbox" href="{% url 'meta_detail' %}">Request META</a>
+                    <a class="navbox" href="{% url 'event_new' %}">New | </a>
+                    <a class="navbox" href="{% url 'meta_detail' %}">Request META | </a>
+                    <a class="navbox" href="{% url 'set_timezone' %}">Set Timezone</a>
 				</div>
             </div>
             <div id="container">
